# pushnav

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
camera/windows/: camera_server.c
data/: VERSION.json
docs/: index.md  install.md  using-pushnav.md
docs/superpowers/plans/: 2026-05-06-react-ui-pivot.md  2026-05-08-what-to-see-catalog.md  2026-05-11-advanced-catalog-search.md
docs/superpowers/specs/: 2026-05-06-react-ui-pivot-design.md  2026-05-08-what-to-see-catalog-design.md  2026-05-11-advanced-catalog-search-design.md
overrides/: main.html
python/evf/: main.py  paths.py
python/evf/camera/: client.py
python/evf/config/: manager.py
python/evf/engine/: engine.py  goto_target.py  sample_injector.py
python/evf/stellarium/: server.py
python/evf/webserver/: server.py
scripts/: build_catalogs.py  build_linux.sh  build_mac.sh  build_windows.bat  run_dev.sh  run_dev_linux.sh  run_dev_windows.bat  sync_catalog.py
specs/start/: ACCEPTANCE_TESTS.md  SPEC_ARCHITECTURE.md  SPEC_BUILD_RELEASE.md  SPEC_PRODUCT.md
tests/: test_build_catalogs.py  test_engine_location.py  test_webserver_api.py  test_webserver_payload.py
tests/fixtures/: hyg_sample.csv  openngc_sample.csv
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  test-setup.ts
web/src/components/: ActivityDot.tsx  ErrorModal.tsx  PlateSolveStats.tsx  StateHeader.tsx  StepIndicator.tsx  TabSwitch.tsx
web/src/data/: hyg-bright.json  objects.json  openngc.json
web/src/hooks/: useView.ts
web/src/lib/: api.ts  (+8 more)
(+30 files in other folders)
